# nxp-nnstreamer-examples

./: CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  SBOM-nxp-nnstreamer-examples-v1.8.spdx.json  SBOM.spdx.json  SCR-1.1.txt  SCR-1.2.txt  SCR-1.3.txt  SCR-1.4.1.txt  SCR-1.4.txt  SCR-1.5.1.txt  SCR-1.5.txt  SCR-1.6.txt  SCR-1.7.txt  SRC.txt
LICENSES/: MEDIA_LICENSES.txt
classification/: README.md  classification_utils.sh  example_classification_mobilenet_v1_dvrt.sh  example_classification_mobilenet_v1_tflite.cc  example_classification_mobilenet_v1_tflite.sh
classification/cpp/: example_classification_mobilenet_v1_tflite.cpp  example_classification_two_cameras_tflite.cpp
common/: common_utils.sh
common/cpp/: README.md  common_utils.hh  imx_devices.hh  logging.hh
common/cpp/include/: common.hpp  gst_pipeline_imx.hpp  gst_source_imx.hpp  gst_video_imx.hpp  gst_video_post_process.hpp  imx_devices.hpp  logging.hpp  model_infos.hpp  nn_decoder.hpp  tensor_custom_data_generator.hpp
common/cpp/src/: gst_pipeline_imx.cpp  gst_source_imx.cpp  gst_video_imx.cpp  gst_video_post_process.cpp  model_infos.cpp  nn_decoder.cpp  tensor_custom_data_generator.cpp
common/python/imxpy/: common_utils.py  imx_dev.py
depth/: README.md
depth/cpp/: custom_depth_decoder.hpp  example_depth_midas_v2_tflite.cpp
detection/: README.md  README_postprocess_yolov4_tiny.md  detection_utils.sh  example_detection_mobilenet_ssd_v2_dvrt.sh  example_detection_mobilenet_ssd_v2_tflite.sh  example_detection_yolo_v4_tiny_tflite.sh  postprocess_yolov4_tiny.py  yolov4-tiny_export_model.py
detection/cpp/: example_detection_mobilenet_ssd_v2_tflite.cpp
downloads/: README.md  compile_models.sh  download.ipynb  requirements.txt
face/: README.md  deepface.py  example_emotion_detection_tflite.py  example_face_detection_tflite.py  example_face_recognition_tflite.py  facedetectpipe.py  facenet.py  facenet_create_embedding.py  ultraface.py
face/cpp/: custom_emotion_decoder.cpp  custom_emotion_decoder.hpp  custom_face_decoder.cpp  custom_face_decoder.hpp  example_emotion_detection_tflite.cpp  example_face_detection_tflite.cpp
face/facenet_db/: angelina_jolie.npy  brad_pitt.npy
mixed/: README.md
mixed/cpp/: custom_face_and_pose_decoder.cpp  custom_face_and_pose_decoder.hpp  example_classification_and_detection_tflite.cpp  example_double_classification_tflite.cpp  example_emotion_and_detection_tflite.cpp  example_face_and_pose_detection_tflite.cpp
pose/: README.md  example_pose_movenet_tflite.py
pose/cpp/: custom_pose_decoder.cpp  custom_pose_decoder.hpp  example_pose_movenet_tflite.cpp
segmentation/: README.md  example_segmentation_deeplab_v3_tflite.sh  segmentation_utils.sh
segmentation/cpp/: example_segmentation_deeplab_v3_tflite.cpp
tasks/: README.md
tasks/classification/: README.md  classification_utils.sh  example_classification_mobilenet_v1_tflite.sh
tasks/classification/cpp/: example_classification_mobilenet_v1_tflite.cpp
tasks/face-processing/: README.md
tasks/face-processing/common/: deepface.py  facedetectpipe.py  facenet.py  facenet_create_embedding.py  facenet_create_embedding_requirements.txt  ultraface.py
tasks/face-processing/common/facenet_db/: thispersondoesnotexist.npy
tasks/face-processing/emotion-classification/: example_emotion_classification_tflite.py
tasks/face-processing/emotion-classification/cpp/: custom_emotion_decoder.cpp  custom_emotion_decoder.hpp  example_emotion_classification_tflite.cpp
tasks/face-processing/face-detection/: example_face_detection_tflite.py
tasks/face-processing/face-detection/cpp/: custom_face_decoder.cpp  custom_face_decoder.hpp  example_face_detection_tflite.cpp
tasks/face-processing/face-recognition/: example_face_recognition_tflite.py
tasks/face-processing/face-recogniton/: example_face_recognition_tflite.py
tasks/mixed-demos/: README.md
tasks/mixed-demos/cpp/: custom_face_and_pose_decoder.cpp  example_classification_and_detection_tflite.cpp  example_double_classification_tflite.cpp  example_emotion_and_detection_tflite.cpp  example_face_and_pose_detection_tflite.cpp
tasks/monocular-depth-estimation/: README.md  export_midas-v2_to_TensorFlow.sh  requirements.txt
tasks/monocular-depth-estimation/cpp/: custom_depth_decoder.cpp  custom_depth_decoder.hpp  example_depth_midas_v2_tflite.cpp
tasks/object-detection/: README.md  detection_utils.sh  example_detection_mobilenet_ssd_v2_tflite.sh  example_detection_yolo_v4_tiny_tflite.sh  postprocess_yolov4_tiny.py  yolov4-tiny_export_model.py
tasks/object-detection/cpp/: example_detection_mobilenet_ssd_v2_tflite.cpp
tasks/pose-estimation/: README.md  example_pose_movenet_tflite.py
tasks/pose-estimation/cpp/: example_pose_movenet_tflite.cpp
tasks/semantic-segmentation/: README.md  example_segmentation_deeplab_v3_tflite.sh  segmentation_utils.sh
tasks/semantic-segmentation/cpp/: example_segmentation_deeplab_v3_tflite.cpp
tools/: setup_environment.sh  upload.sh
